Fixed navbar to screen. Burger Icon on mobile screens with dropdown menu

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 .wrapper > * {
   grid-column: 2;
+  z-index: 1;
 }
 
 .full-bleed {
